Se agrega metodo para manejar mat-tree

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -693,7 +693,12 @@
     "rcr": "Rcr",  
     "editable": "Editable",
     "membership": "Membership",
-    "status": "Status"      
+    "status": "Status",
+    "statuses": {
+      "deleted": "Deleted",
+      "active": "Active",
+      "inactive": "Inactive"
+    }      
   },
   "validations": {
     "required": "The field {property} is required.",
