--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -720,5 +720,29 @@
     "required": "El campo {property} es requerido.",
     "minLength": "El campo {property} tiene un valor de '{model}', pero debe tener una longitud minima de {min}.",
     "maxLength": "El campo {property} tiene un valor de '{model}', pero debe tener una longitud maxima de {max}."
+  },
+  "menu": {
+    "SetUp": "Configuración",
+    "Currency": "Moneda",
+    "Countries": "Paises",
+    "States": "Estados",
+    "Cities": "Ciudades",
+    "Job-position": "Cargos",
+    "Allies": "Aliados",
+    "Memberships": "Membresias",
+    "Branches": "Sucursales",
+    "Bussiness units": "Uni. de negocio",
+    "Expense": "Gastos", 
+    "Profile action": "Acción de perfil",
+    "Items menu": "Items del menu",
+    "Profile": "Perfil",
+    "Category": "Categoría",
+    "Rate":"Tasas",
+    "Language": "Idioma",
+    "Profession": "Profesion",
+    "Employees": "Personal",
+    "Industry": "Industria",
+    "Client": "Clientes",
+    "Approaches": "Enfoques"
   }
 }
