--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -740,7 +740,7 @@
     "Items menu": "Items menu",
     "Profile": "Profile",
     "Category": "Category",
-    "Rates":"Rate",
+    "Rates":"Rates",
     "Language": "Language",
     "Profession": "Profession",
     "Employees": "Employees",
