Se agrega boton siguiente y atras al componente del tab

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -23,6 +23,8 @@
     "delete": "Delete",
     "yes": "Yes",
     "no": "No",
+    "next": "Next",
+    "back": "Back",
     "profile": {
       "profile": "Profile",
       "personal_information": "Personal information",
