--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -23,6 +23,8 @@
     "delete": "Eliminar",
     "yes": "Si",
     "no": "No",
+    "next": "Siguiente",
+    "back": "Atras",
     "profile": {
       "profile": "Perfil",
       "personal_information": "Información personal",
