Menu aside + Marias changes

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -809,8 +809,9 @@
     "Branches": "Branches",
     "Bussiness units": "Bussiness units",
     "Expense": "Expense", 
-    "Profile action": "Profile action",
-    "Items menu": "Items menu",
+    "User profile": "User profile",
+    "Actions": "Actions",
+    "Menu items": "Menu items",
     "Profile": "Profile",
     "Category": "Category",
     "Rates":"Rates",
