--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -813,8 +813,9 @@
     "Branches": "Sucursales",
     "Bussiness units": "Uni. de negocio",
     "Expense": "Gastos", 
-    "Profile action": "Acción de perfil",
-    "Items menu": "Items del menu",
+    "User profile" : "Perfil de usuario",
+    "Actions": "Acciones",
+    "Menu items": "Items del menu",
     "Profile": "Perfil",
     "Category": "Categoría",
     "Rates":"Tasas",
